# TraceIQ

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MATH.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  experiments.yml  publish-testpypi.yml  publish.yml
docs/: THEORY.md  architecture.md  cli.md  concepts.md  configuration.md  examples.md  experiments.md  index.md  installation.md  integration.md  metrics.md  quickstart.md
docs/api/: index.md
examples/: simulate_infection.py  smoke.py  test_real_agents.py
experiments/: README.md  exp_causal_chain.py  exp_false_positive.py  exp_log_replay.py  exp_scaling.py  mcp_demo_client.py  mcp_server_traceiq.py  plot_all.py  run_comparison.py  run_exp1_wrong_hint.py  run_exp2_propagation.py  run_exp3_mitigation.py  run_metric_properties.py  run_stats_analysis.py  stats.py  topologies.py  utils.py
experiments/data/: injection_log.jsonl  tasks_math.jsonl
experiments/results/: exp1_results.csv  exp2_results.csv  exp3_results.csv
notebooks/: demo.ipynb
research/: __init__.py  ablation_study.py  sensitivity_analysis.py  synthetic_simulation.py
scripts/: run_validation.sh
src/traceiq/: __init__.py  capabilities.py  cli.py  embeddings.py  export.py  graph.py  metrics.py  models.py  plotting.py  policy.py  report.py  risk.py  robust_stats.py  schema.py  scoring.py  tracker.py  validity.py  weights.py
src/traceiq/storage/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_calibration.py  test_canonical_metrics.py  test_capabilities.py  test_experiment_sanity.py  test_export.py  test_golden.py  test_influence_ordering.py  test_integration.py  test_metric_invariants.py  test_metrics.py  test_mitigation_effectiveness.py  test_performance.py  test_plotting.py  test_policy.py  test_pypi_safety.py  test_risk.py  test_schema.py  test_scoring.py  test_storage_sqlite.py  test_validity.py  test_weights.py
