[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceiq"
version = "0.2.0"
description = "Measure AI-to-AI influence in multi-agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "TraceIQ Contributors" }
]
keywords = ["ai", "agents", "influence", "tracking", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.2",
]
plot = [
    "matplotlib>=3.7",
]
all = [
    "sentence-transformers>=2.2",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
traceiq = "traceiq.cli:cli"

[project.urls]
Homepage = "https://github.com/Anarv2104/TraceIQ"
Documentation = "https://github.com/Anarv2104/TraceIQ#readme"
Repository = "https://github.com/Anarv2104/TraceIQ"

[tool.hatch.build.targets.wheel]
packages = ["src/traceiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
